--- a/dota/bower.json
+++ b/dota/bower.json
@@ -19,6 +19,10 @@
     "tests"
   ],
   "dependencies": {
-    "paper-checkbox": "Polymer/paper-checkbox#^0.5.6"
+    "polymer": "2.7.2",
+    "paper-checkbox": "2.0.4",
+    "paper-item": "2.1.0",
+    "paper-button": "2.1.1",
+    "paper-input": "2.1.0"
   }
 }
